# KNU

./: .gitignore  Cargo.toml  README.md  build.sh  port_tcc.sh
.cargo/: config.toml
include/knu/: klibc.h
releases/: kbash
src/: allocator.rs  crt0.s  env.rs  error.rs  fs.rs  intrinsics.rs  io.rs  lib.rs  libc.rs  panic.rs  proc.rs  process.rs  string.rs  syscalls.rs
src/coreutils/: kbash.rs  kcat.rs  kecho.rs  knu_app.c  test_libc.c
