[package]
name = "knu"
version = "0.7.2"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "kbash"
path = "src/coreutils/kbash.rs"

[[bin]]
name = "kcat"
path = "src/coreutils/kcat.rs"

[[bin]]
name = "kecho"
path = "src/coreutils/kecho.rs"

[dependencies]

[profile.release]
opt-level = "z"
lto = false
codegen-units = 1
panic = "abort"
strip = false
